--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -204,5 +204,65 @@
             <Font size="16.0" />
          </font>
       </Button>
+      <Label alignment="CENTER" layoutX="41.0" layoutY="11.0" prefHeight="30.0" prefWidth="100.0" text="A" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="141.0" layoutY="11.0" prefHeight="30.0" prefWidth="100.0" text="B" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="241.0" layoutY="11.0" prefHeight="30.0" prefWidth="100.0" text="C" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="341.0" layoutY="11.0" prefHeight="30.0" prefWidth="100.0" text="D" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="441.0" layoutY="11.0" prefHeight="30.0" prefWidth="100.0" text="E" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="541.0" layoutY="11.0" prefHeight="30.0" prefWidth="100.0" text="F" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="14.0" layoutY="41.0" prefHeight="100.0" prefWidth="27.0" text="1" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="14.0" layoutY="141.0" prefHeight="100.0" prefWidth="27.0" text="2" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="14.0" layoutY="241.0" prefHeight="100.0" prefWidth="27.0" text="3" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="14.0" layoutY="341.0" prefHeight="100.0" prefWidth="27.0" text="4" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="14.0" layoutY="441.0" prefHeight="100.0" prefWidth="27.0" text="5" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="14.0" layoutY="541.0" prefHeight="100.0" prefWidth="27.0" text="6" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
