--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -9,182 +9,182 @@
 
 <AnchorPane id="AnchorPane" prefHeight="750.0" prefWidth="750.0" style="-fx-background-color: black;" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ryan.battleship.FXMLController">
    <children>
-      <ImageView fx:id="imgGrid1" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid1" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid2" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid2" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid3" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid3" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid4" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid4" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid5" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid5" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid6" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid6" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="41.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid7" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid7" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid8" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid8" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid9" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid9" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid10" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid10" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid11" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid11" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid12" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid12" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="141.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid13" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid13" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid14" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid14" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid15" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid15" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid16" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid16" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid17" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid17" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid18" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid18" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="241.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid19" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid19" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid20" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid20" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid21" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid21" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid22" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid22" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid23" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid23" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid24" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid24" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="341.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid25" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid25" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid26" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid26" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid27" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid27" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid28" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid28" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid29" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid29" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid30" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid30" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="441.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid31" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid31" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="41.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid32" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid32" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="141.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid33" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid33" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="241.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid34" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid34" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="341.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid35" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid35" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="441.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgGrid36" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgGrid36" accessibleText="O" fitHeight="100.0" fitWidth="100.0" layoutX="541.0" layoutY="541.0" onMouseClicked="#imgClick" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../white.jpg" />
          </image>
@@ -264,5 +264,10 @@
             <Font size="20.0" />
          </font>
       </Label>
+      <Button alignment="CENTER" layoutX="53.0" layoutY="666.0" mnemonicParsing="false" onAction="#btnReset" prefHeight="35.0" prefWidth="76.0" styleClass="bevel-grey" text="Reset">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
