--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -269,5 +269,20 @@
             <Font size="16.0" />
          </font>
       </Button>
+      <Label alignment="CENTER" layoutX="649.0" layoutY="141.0" prefHeight="30.0" prefWidth="87.0" text="Hits" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblHits" alignment="CENTER" layoutX="657.0" layoutY="176.0" prefHeight="21.0" prefWidth="59.0" text="0" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="683.0" layoutY="176.0" prefHeight="30.0" prefWidth="53.0" text="/ 5" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
