--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -284,5 +284,15 @@
             <Font size="20.0" />
          </font>
       </Label>
+      <Label alignment="CENTER" layoutX="649.0" layoutY="211.0" prefHeight="100.0" prefWidth="100.0" text="Scores by Min Turns" textFill="WHITE" underline="true" wrapText="true">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblScores" alignment="TOP_CENTER" layoutX="651.0" layoutY="310.0" prefHeight="331.0" prefWidth="87.0" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
