--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -199,7 +199,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="btnExit" alignment="CENTER" layoutX="655.0" layoutY="666.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnExitClick" onMouseEntered="#btnHover" onMouseExited="#btnUnhover" prefHeight="50.0" prefWidth="75.0" styleClass="bevel-grey" text="Exit">
+      <Button fx:id="btnExit" alignment="CENTER" layoutX="655.0" layoutY="666.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnExitClick" onMouseEntered="#btnHover" onMouseExited="#btnUnhover" prefHeight="50.0" prefWidth="75.0" styleClass="bevel-grey" text="Menu">
          <font>
             <Font size="16.0" />
          </font>
@@ -294,10 +294,5 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="btnInstruct" alignment="CENTER" layoutX="191.0" layoutY="666.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnInstructClick" onMouseEntered="#btnHover" onMouseExited="#btnUnhover" prefHeight="50.0" prefWidth="75.0" styleClass="bevel-grey" text="How to Play">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
