--- a/src/main/resources/fxml/scores.fxml
+++ b/src/main/resources/fxml/scores.fxml
@@ -12,12 +12,17 @@
             <Font size="15.0" />
          </font>
       </Button>
-      <Label alignment="CENTER" layoutX="243.0" layoutY="14.0" prefHeight="100.0" prefWidth="264.0" text="High Scores" textFill="WHITE" wrapText="true">
+      <Label alignment="CENTER" layoutX="243.0" layoutY="92.0" prefHeight="100.0" prefWidth="264.0" text="High Scores" textFill="WHITE" wrapText="true">
          <font>
             <Font size="50.0" />
          </font>
       </Label>
-      <Label fx:id="lblScores" alignment="TOP_CENTER" layoutX="14.0" layoutY="106.0" prefHeight="571.0" prefWidth="722.0" textFill="WHITE">
+      <Label fx:id="lblNames" alignment="TOP_RIGHT" layoutX="128.0" layoutY="234.0" prefHeight="283.0" prefWidth="247.0" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblScores" alignment="TOP_LEFT" layoutX="375.0" layoutY="234.0" prefHeight="283.0" prefWidth="247.0" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
