--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -290,5 +290,15 @@
          </font>
       </Label>
       <Label alignment="CENTER" layoutX="649.0" layoutY="22.0" prefHeight="38.0" prefWidth="87.0" text="Seconds Played" textFill="WHITE" />
+      <Label alignment="CENTER" layoutX="643.0" layoutY="241.0" prefHeight="30.0" prefWidth="100.0" text="Total Wins" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblWins" alignment="CENTER" layoutX="663.0" layoutY="271.0" prefHeight="21.0" prefWidth="59.0" text="0" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
