--- a/src/main/resources/fxml/scores.fxml
+++ b/src/main/resources/fxml/scores.fxml
@@ -22,9 +22,19 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <Label fx:id="lblScores" alignment="TOP_LEFT" layoutX="401.0" layoutY="234.0" prefHeight="283.0" prefWidth="247.0" textFill="WHITE">
+      <Label fx:id="lblScores" alignment="TOP_CENTER" layoutX="401.0" layoutY="234.0" prefHeight="283.0" prefWidth="247.0" textFill="WHITE">
          <font>
             <Font size="32.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="137.0" layoutY="134.0" prefHeight="100.0" prefWidth="264.0" text="Name" textFill="WHITE" wrapText="true">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="375.0" layoutY="134.0" prefHeight="100.0" prefWidth="264.0" text="Turns" textFill="WHITE" wrapText="true">
+         <font>
+            <Font size="25.0" />
          </font>
       </Label>
    </children>
